tests/src/frontend/syntax/invalid/missing_fun_static.sk
class X() {
  static normalize(): void {}
}
